adding missing bib entries

--- a/biblio.bib
+++ b/biblio.bib
@@ -66,11 +66,13 @@
   year={2014}
 }
 
-@article{agerri2018language,
-  title={Language independent sequence labelling for opinion target extraction},
+@article{agerri2019language,
+  title={Language independent sequence labelling for Opinion Target Extraction},
   author={Agerri, Rodrigo and Rigau, German},
   journal={Artificial Intelligence},
-  year={2018},
+  volume={268},
+  pages={85--95},
+  year={2019},
   publisher={Elsevier}
 }
 
@@ -359,3 +361,26 @@
   author={Fern{\'a}ndez de Landa, Joseba},
   year={2018}
 }
+
+@InProceedings{turian-ratinov-bengio:2010:ACL,
+author    = {Turian, Joseph  and  Ratinov, Lev-Arie  and  Bengio, Yoshua},
+title     = {Word Representations: A Simple and General Method for Semi-Supervised Learning},
+booktitle = {Proceedings of the 48th Annual Meeting of the Association for Computational Linguistics},
+month     = {July},
+year      = {2010},
+address   = {Uppsala, Sweden},
+publisher = {Association for Computational Linguistics},
+pages     = {384--394}
+}
+
+@article{ratnaparkhi1999learning,
+  title={Learning to parse natural language with maximum entropy models},
+  author={Ratnaparkhi, Adwait},
+  journal={Machine learning},
+  volume={34},
+  number={1-3},
+  pages={151--175},
+  year={1999},
+  publisher={Springer}
+}
+
