formal informal justification done

--- a/artikulua.tex
+++ b/artikulua.tex
@@ -235,16 +235,13 @@ Once the community to investigate is specified and the sample of users, whom inf
 
 \section{Classifying Young/Adult Users}\label{sec:class-young-users}
 
-In this section we present our work to classify Basque Twitter users as young or adult based on the tweets they write. As we have seen in Section \ref{sec:identifier_background}. previous work includes automatic approaches to characterize users in the context of social networks and media, the most common being those related with genre and age \citep{cesare2017detection}. This is in line with our objective of developing a classifier to characterizing Basque Twitter users according to two stages of life (young, adult).
+In this section we present our work to classify Basque Twitter users as young or adult by analyzing their tweets' writing style. As we have seen in Section \ref{sec:identifier_background}, previous work includes automatic approaches to characterize users in the context of social networks and media, the most common being those related with genre and age \citep{cesare2017detection}. Our objective of developing a classifier to characterizing Basque Twitter users according to two stages of life (young/adult) is therefore placed within that research line.
 
-Section \ref{sec:identifier_background} shows that most of previous work addresses the problem of classifying age stages using supervised machine learning techniques. This means that data is annotated according to the age or age stage of each user. Furthermore, previous results indicate that classifying by age stages allows to obtain better results than by formulating the problem in terms of age ranges \citep{nguyen2013old}. This seems to be due to the fact that shared experiences are easier to relate along time by using age stages \citep{nguyen2016computational,eckert2017age}. Therefore, in this work we have decided to focus on classifying users in terms of two general age stages, namely, young and adult.
+Furthermore, section \ref{sec:identifier_background} also shows that most of previous work addresses the problem of classifying age stages using supervised machine learning techniques. This implies that some training data must be annotated according to the age or age stage of each user. Moreover state of the art  results indicate that classifying by age stages allows to obtain better results than when the problem is formulated in terms of age ranges \citep{nguyen2013old}. This seems to be due to the fact that shared experiences are easier to relate along time by using age stages rather than age ranges \citep{nguyen2016computational,eckert2017age}. Therefore, in this work we decided to focus on classifying users in terms of two general age stages, namely, young and adult.
 
-However, this decision encountered an early methodological problem. In order to annotate tweets written in Basque according to the age stages of their authors it is obviously necessary to know that beforehand. Unfortunately, for the large majority of users from which we mined tweets this information is not available. Our decision to overcome this problem consisted of focusing on the information available on the tweets themselves by taking into account writing style features. After all, most of the previous work widely uses these type of features in order to classify users in terms of age stages \citep{rao2010classifying,al2012homophily,nguyen2013old,morgan2017predicting}.
+However, this decision encountered an early methodological problem. In order to annotate tweets written in Basque according to the age stages of their authors it is obviously necessary to have available some data providing such information. Unfortunately, for the large majority of users from which we mined tweets this information is not available. Thus, our decision to overcome this problem consisted of focusing on the information available on the tweets themselves by taking into account writing style features. After all, most of the previous work widely uses writing style based features in order to classify users in terms of age stages \citep{rao2010classifying,al2012homophily,nguyen2013old,morgan2017predicting}.
 
-As suggested by \cite{nguyen2013old}, adults tend to use more conventional language whereas for young people it is more common to display repetitions and out of dictionary words \citep{rao2010classifying,rosenthal2011age,morgan2017predicting}.
-
- Ondorio orokorragoetara joz, idazkera aldatu egiten da adinean aurrera egin ahala, gazteagoek estilo ezohikoagoa edo informalagoa daukatelarik \citep{nguyen2013old}. Era honetan, gazteen idazteko modua, idazkera formal batetik gehien aldentzen dena bezala kontsideratuko da, helduen idazkera estilo formalarekin erlazionatuz eta gazteena estilo informalarekin. Horrela, euskal erabiltzaileak etiketatu ordez, txioak etiketatzeari ekingo zaio, formal eta informal artean desberdinduz, zailtasunak gaindituz. Era honetan, txioen motaren kontzentrazioren arabera sailkatuko dira erabiltzaileak gazte eta heldu artean.
-
+It has been suggested that adults tend to use more conventional language \cite{nguyen2013old} whereas for young people it is more common to display repetitions and out of dictionary words \citep{rao2010classifying,rosenthal2011age,morgan2017predicting}. Generalizing on this idea we will assume that writing style changes according to the age of the twitter user. In other words, we will consider that \emph{adult writing style} is more formal whereas young people's style can be seen as more informal. Therefore, we will be classifying users as young/adult by classifying their tweets in terms of formal or informal language.
 
 \subsection{Experimental setup}\label{sec:met}
 
